--- a/.htaccess
+++ b/.htaccess
@@ -4,7 +4,22 @@
 </ifmodule>
 # END GZIP
 
-# BEGIN Leverage browser caching
+
+# BEGIN alt GZIP (do not use both)
+<ifModule mod_gzip.c>
+    mod_gzip_on Yes
+    mod_gzip_dechunk Yes
+    mod_gzip_item_include file .(html?|txt|css|js|php|pl)$
+    mod_gzip_item_include handler ^cgi-script$
+    mod_gzip_item_include mime ^text/.*
+    mod_gzip_item_include mime ^application/x-javascript.*
+    mod_gzip_item_exclude mime ^image/.*
+    mod_gzip_item_exclude rspheader ^Content-Encoding:.*gzip.*
+</ifModule>
+# END alt GZIP
+
+
+# BEGIN leverage browser caching
 <IfModule mod_headers.c>
 
     # Time
