--- a/linter/.eslintrc
+++ b/linter/.eslintrc
@@ -6,6 +6,7 @@
   "rules": {
       "semi": ["error", "never"],
       "quotes": ["error", "single"],
+      "no-undef": "error",
       "no-unused-vars": "error",
       "no-use-before-define": "error",
       "no-dupe-args": "error",
