--- a/linter/.eslintrc
+++ b/linter/.eslintrc
@@ -3,8 +3,11 @@
       "browser": true,
       "node": true,
   },
+  "globals": {
+      "Promise": false
+  },
   "rules": {
-      "semi": ["error", "never"],
+      "semi": ["warn", "never"],
       "quotes": ["error", "single"],
       "no-undef": "error",
       "no-unused-vars": "error",
@@ -13,16 +16,16 @@
       "no-dupe-keys": "error",
       "no-unreachable": "error",
       "block-scoped-var": "error",
-      "class-methods-use-this": "error",
+      "class-methods-use-this": "warn",
       "no-param-reassign": "error",
       "vars-on-top": "error",
       "no-shadow-restricted-names": "error",
       "indent": ["error", 2],
       "operator-assignment": ["error", "always"],
-      "space-before-blocks": "error",
-      "space-before-function-paren": ["error", "never"],
-      "space-in-parens": ["error", "never"],
-      "arrow-spacing": "error",
+      "space-before-blocks": "warn",
+      "space-before-function-paren": ["warn", "never"],
+      "space-in-parens": ["warn", "never"],
+      "arrow-spacing": "warn",
       "constructor-super": "error",
       "no-this-before-super": "error",
       "no-useless-constructor": "error",
