--- a/linter/.eslintrc
+++ b/linter/.eslintrc
@@ -9,7 +9,7 @@
   },
   "rules": {
       "semi": ["warn", "never"],
-      "quotes": ["error", "single"],
+      "quotes": ["warn", "single"],
       "no-undef": "error",
       "no-unused-vars": "error",
       "no-redeclare": "error",
@@ -38,8 +38,9 @@
       "no-duplicate-imports": "error",
       "no-var": "error",
       "object-shorthand": "error",
-      "prefer-const": "warn",
       "no-invalid-this": "error",
+      "no-unexpected-multiline": "error",
+      "prefer-const": "warn",
       "space-infix-ops": "warn",
       "comma-spacing": ["warn", { "before": false, "after": true }],
       "spaced-comment": ["warn", "always"]
