nova pravila neproverena u praksi

--- a/linter/.eslintrc
+++ b/linter/.eslintrc
@@ -43,7 +43,9 @@
       "prefer-const": "warn",
       "space-infix-ops": "warn",
       "comma-spacing": ["warn", { "before": false, "after": true }],
-      "spaced-comment": ["warn", "always"]
+      "spaced-comment": ["warn", "always"],
+      "camelcase": "warn",
+      "new-cap": "warn"
   },
   "parserOptions": {
       "ecmaVersion": 8,
